--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -96,3 +96,12 @@ zashi:
 
 task_manager:
   - com.rk.taskmanager/com.rk.taskmanager.MainActivity
+
+wg_tunnel:
+  - com.zaneschepke.wireguardautotunnel/com.zaneschepke.wireguardautotunnel.MainActivity
+
+_4shared:
+  - com.forshared.files/com.cloud.module.splash.SplashActivity
+
+_7_eleven:
+  - com.sei.android/com.sei.android.MainActivity
