update pending icons

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -55,6 +55,8 @@ blast_off:
 classipod:
   - com.adeeteya.classipod/com.ryanheise.audioservice.AudioServiceActivity
 
+classipod_alt_1: {}
+
 febbox:
   - com.topspeed.febbox2/com.snowtop.diskpanda.view.activity.SplashActivity
 
