--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -107,3 +107,9 @@ _4shared:
 
 _7_eleven:
   - com.sei.android/com.sei.android.MainActivity
+
+dianping:
+  - com.dianping.v1/com.dianping.v1.NovaMainActivity
+
+gospel_living:
+  - org.lds.liv/org.lds.gliv.ux.nav.SplashActivity
