--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -167,3 +167,21 @@ verizon_protect:
 
 voice_calculator:
   - com.atnsoft.calculator/com.atnsoft.calculator.MainActivity
+
+glassdoor:
+  - com.glassdoor.app/com.glassdoor.app.presentation.ui.MainActivity
+
+lemon_cash:
+  - com.applemoncash/com.applemoncash.MainActivity
+
+startpage:
+  - com.startpage.app/com.google.android.apps.chrome.Main
+
+slide:
+  - me.edgan.redditslide/me.edgan.redditslide.Activities.Slide
+
+shopeepay:
+  - com.shopeepay.id/com.shopee.app.ui.home.HomeActivity_
+
+bank:
+  - com.handynorth.moneywise/com.handynorth.moneywise.MoneyWise
