Add icons&compinfo (#1163)
* add icons

* add componentinfo

* small fix

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -113,3 +113,75 @@ dianping:
 
 gospel_living:
   - org.lds.liv/org.lds.gliv.ux.nav.SplashActivity
+
+amoled_backgrounds:
+  - com.droidheat.amoledbackgrounds/com.droidheat.amoledbackgrounds.MainActivity
+
+atlas_ai_answers:
+  - org.atlas/org.atlas.MainActivity
+
+aura_frames:
+  - com.pushd.client/com.pushd.client.ui.LaunchActivity
+
+bhub:
+  - ru.blays.hub/ru.blays.hub.MainActivity
+
+cbna:
+  - com.cbna.grip/com.banno.grip.startup.StartupActivity
+
+cineville:
+  - nl.cineville.cineville/nl.cineville.cineville.MainActivity
+
+coreply:
+  - app.coreply.coreplyapp/app.coreply.coreplyapp.SettingsActivity
+
+easy_fast_intermittent_fasting:
+  - com.easyfastapp.app/com.easyfastapp.app.MainActivity
+
+finanzen_net:
+  - de.gratisbroker.android.mobileapp/de.gratisbroker.android.mobileapp.MainActivity
+
+flow_finance:
+  - mn.flow.flow/mn.flow.flow.MainActivity
+
+gif_keyboard_by_tenor:
+  - com.riffsy.FBMGIFApp/com.riffsy.ui.activity.SplashActivity
+
+idea_memo:
+  - com.ldlywt.note/com.ldlywt.note.ui.page.main.MainActivity
+
+mqtt_alert_for_iot:
+  - gigiosoft.MQTTAlert/gigiosoft.MQTTAlert.main
+
+myasus:
+  - com.asus.ia.asusapp/com.asus.ia.asusapp.Phone.Init.DefaultLauncherActivity
+
+seek_jobs:
+  - au.com.seek/seek.base.deeplink.presentation.DeeplinkActivity
+
+ventra:
+  - com.ventrachicago.riderapp/com.cmtventra.MainActivity
+
+verizon_protect:
+  - com.securityandprivacy.android.verizon.vms/com.verizon.neon.ui.activities.NeonMainActivity
+
+voice_calculator:
+  - com.atnsoft.calculator/com.atnsoft.calculator.MainActivity
+
+glassdoor:
+  - com.glassdoor.app/com.glassdoor.app.presentation.ui.MainActivity
+
+lemon_cash:
+  - com.applemoncash/com.applemoncash.MainActivity
+
+startpage:
+  - com.startpage.app/com.google.android.apps.chrome.Main
+
+slide:
+  - me.edgan.redditslide/me.edgan.redditslide.Activities.Slide
+
+shopeepay:
+  - com.shopeepay.id/com.shopee.app.ui.home.HomeActivity_
+
+bank:
+  - com.handynorth.moneywise/com.handynorth.moneywise.MoneyWise
