--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -185,3 +185,15 @@ shopeepay:
 
 bank:
   - com.handynorth.moneywise/com.handynorth.moneywise.MoneyWise
+
+calm_urge:
+  - com.wisefox.self.harm.tracker/com.unity3d.player.UnityPlayerActivity
+
+chargemap:
+  - com.chargemap_beta.android/com.chargemap_beta.android.ChargeMapActivity
+
+kkday:
+  - com.kkday.member/com.kkday.member.view.launch.WelcomeActivity
+
+moovr_ph:
+  - com.moovrph.android/com.joyride.android.ui.splash.SplashActivity
