--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -197,3 +197,33 @@ kkday:
 
 moovr_ph:
   - com.moovrph.android/com.joyride.android.ui.splash.SplashActivity
+
+bank_albilad:
+  - com.bankalbilad.NewRMB/com.bankalbilad.NewRMB.BABRMB
+
+bookshelf:
+  - com.bookshelf.prod/com.bookshelf.SplashActivity
+
+discover_yourself:
+  - com.mentallabs.mentalhealth/com.mentallabs.mentalhealth.MainActivity
+
+foodvisor:
+  - io.foodvisor.foodvisor/io.foodvisor.foodvisor.app.splash_screen.SplashScreenActivity
+
+i_saku:
+  - com.isaku.app/com.isaku.app.Activity.SplashScreen.SplashScreenActivityAlias
+
+jiofinance:
+  - in.jfs.jiofinance/in.jfs.jiofinance.presentation.activity.SplashActivity
+
+my_ntra:
+  - eg.gov.tra/eg.gov.tra.ui.splash.SplashActivity
+
+racify:
+  - com.iltstudios.racify/com.iltstudios.racify.MainActivity
+
+rikstv:
+  - no.rikstv.app/no.rikstv.app.MainActivity
+
+zettel_notes:
+  - org.eu.thedoc.zettelnotes/org.eu.thedoc.zettelnotes.screens.MainActivity
