--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -227,3 +227,13 @@ rikstv:
 
 zettel_notes:
   - org.eu.thedoc.zettelnotes/org.eu.thedoc.zettelnotes.screens.MainActivity
+
+jupiter:
+  - money.jupiter/money.jupiter.MainActivityDefault
+
+discover_mobile:
+  - com.discoverfinancial.mobile/vcfd968a0.hd16a1a11.na1b24d69.l9b350128
+  - com.discoverfinancial.mobile/c9b64f715.ed97ee0e8.a10fbe7a3.sd3dc16cc
+
+cashkaro:
+  - com.cashkaro/com.cashkaro.MainActivity
