--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -237,3 +237,6 @@ discover_mobile:
 
 cashkaro:
   - com.cashkaro/com.cashkaro.MainActivity
+
+nothing_news:
+  - com.nothing.news/com.nothing.news.ui.HomeActivity
