--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,33 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+esso_mobil:
+  - com.exxonmobil.speedpassplus_ca/com.p97.exxonmobil.ui.activities.MainActivity
+
+jetspacer:
+  - com.sakethh.jetspacer/com.sakethh.jetspacer.MainActivity
+
+jiosphere:
+  - com.jio.web/com.google.android.apps.chrome.Main
+
+meteogram:
+  - com.cloud3squared.meteogram.pro/com.cloud3squared.meteogram.MeteogramMain
+
+momogram:
+  - nekox.messenger.broken/org.telegram.messenger.MomogramDefaultIcon
+
+nintendo_today:
+  - com.nintendo.znsa/com.nintendo.aquavast.MainActivity
+
+nothing_glyphify:
+  - com.frank.glyphify/com.frank.glyphify.MainActivity
+
+pokecardex:
+  - com.application.pokecardex/com.application.pokecardex.ui.MainActivity
+
+rewasd:
+  - com.discsoft.rewasd/com.discsoft.rewasd.ui.launcher.LauncherActivity
+
+utag:
+  - com.kieronquinn.app.utag/com.kieronquinn.app.utag.ui.activities.MainActivity
