--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,66 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+esso_mobil:
+  - com.exxonmobil.speedpassplus_ca/com.p97.exxonmobil.ui.activities.MainActivity
+
+jetspacer:
+  - com.sakethh.jetspacer/com.sakethh.jetspacer.MainActivity
+
+jiosphere:
+  - com.jio.web/com.google.android.apps.chrome.Main
+
+meteogram:
+  - com.cloud3squared.meteogram.pro/com.cloud3squared.meteogram.MeteogramMain
+
+momogram:
+  - nekox.messenger.broken/org.telegram.messenger.MomogramDefaultIcon
+
+nintendo_today:
+  - com.nintendo.znsa/com.nintendo.aquavast.MainActivity
+
+nothing_glyphify:
+  - com.frank.glyphify/com.frank.glyphify.MainActivity
+
+pokecardex:
+  - com.application.pokecardex/com.application.pokecardex.ui.MainActivity
+
+rewasd:
+  - com.discsoft.rewasd/com.discsoft.rewasd.ui.launcher.LauncherActivity
+
+utag:
+  - com.kieronquinn.app.utag/com.kieronquinn.app.utag.ui.activities.MainActivity
+
+nubank:
+  - com.nu.production/br.com.nubank.app.valhalla.ValhallaBaseSplashActivity
+
+airtel:
+  - com.myairtelapp/com.myairtelapp.home.views.activities.SplashScreenActivityAlias
+
+qralarm:
+  - com.sweak.qralarm/com.sweak.qralarm.app.MainActivity
+
+mobile_pay:
+  - dk.danskebank.mobilepay/com.dnb.vipps.android.startup.ui.StartupActivity
+
+shell:
+  - com.shell.sitibv.shellgoplusindia/com.shell.crm.common.views.activities.SplashActivity
+
+shein:
+  - com.ril.shein/com.ril.shein.launch.activity.SplashScreenActivity
+
+tick_tick:
+  - com.ticktick.task/com.ticktick.task.HomeAlia_tick
+
+gcash:
+  - com.globe.gcash.android/com.globe.gcash.android.MerryGCash2023
+
+pbs_video:
+  - com.pbs.video/com.pbs.video.StartupActivity
+
+zalopay:
+  - vn.com.vng.zalopay/vn.com.vng.zalopay.splashscreen.presentation.SplashScreenActivityV2
+
+meu_tim:
+  - br.com.timbrasil.meutim/io.flutter.embedding.android.FlutterFragmentActivity
