--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -75,3 +75,69 @@ zalopay:
 
 meu_tim:
   - br.com.timbrasil.meutim/io.flutter.embedding.android.FlutterFragmentActivity
+
+accurx_switch:
+  - com.hermes.induction/com.accurx.accurx.activity.MainActivity
+
+ari_wallet:
+  - arichain.app.ari.wallet/arichain.app.ari.wallet.MainActivity
+
+ataf_foggia:
+  - it.autoroute.ataf/it.autoroute.ataf.ui.SplashActivity
+
+braindump:
+  - com.braindump.voicenotes/com.braindump.voicenotes.presentation.features.MainScreen
+
+dare:
+  - ie.armour.dare2/com.dare.android.ui.MainActivity
+
+delhivery_direct:
+  - com.delhiveryConsigneeApp/com.delhiveryConsigneeApp.MainActivity
+
+eufy_life:
+  - com.oceanwing.smarthome/com.oceanwing.eufylife.ui.activity.WelcomeActivity
+
+floating_stickies:
+  - genius.mohammad.floating.stickies/genius.mohammad.floating.stickies.MainActivity
+
+groovifi:
+  - com.parshendata.groovifi/com.parshendata.groovifi.MainActivity
+
+gxr:
+  - com.gxr/com.viewlift.HomeActivity
+
+inkitt:
+  - com.inkitt.android.hermione/com.inkitt.android.hermione.MainActivity
+
+justalk:
+  - com.juphoon.justalk/com.juphoon.justalk.ui.splash.SplashActivity1
+
+kakaobus:
+  - com.astroframe.seoulbus/publictransport.root.presentation.SplashActivity
+
+magnet_search:
+  - com.content.magnetsearch/com.content.magnetsearch.ui.SplashActivity
+
+minchili:
+  - no.chilimobil.minchili/no.chilimobil.minchili.NorwegianActivity
+
+nutmeg:
+  - com.nutmeg.app/com.nutmeg.app.ui.features.splash.SplashActivity
+
+print_master:
+  - com.project.aimotech.printmaster/com.quyin.printmaster.ui.setup.SplashActivity
+
+stryd:
+  - com.stryd.pioneer/com.stryd.pioneer.MainActivity
+
+th3rdwave:
+  - com.th3rdwave/com.th3rdwave.MainActivity
+
+valero_pay:
+  - com.valero.wholesale.valeropay/com.p97.mfp.MainActivity
+
+voscreen:
+  - com.voscreen.voscreenapp/com.voscreen.voscreenapp.MainActivity
+
+xenea_wallet:
+  - com.xenea.wallet/com.xenea.app.MainActivity
