--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -141,3 +141,9 @@ voscreen:
 
 xenea_wallet:
   - com.xenea.wallet/com.xenea.app.MainActivity
+
+whoosh_sharing:
+  - com.punicapp.whoosh/bike.whoosh.client.root.AppRootFeatureActivity
+
+snoonu:
+  - com.snoonu.customerapp/com.geexarts.snoonu.presentation.splash.SplashScreenActivity
