--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -147,3 +147,12 @@ whoosh_sharing:
 
 snoonu:
   - com.snoonu.customerapp/com.geexarts.snoonu.presentation.splash.SplashScreenActivity
+
+domani:
+  - com.paperlit.android.domani/com.paperlit.paperlitsp.presentation.view.activity.SPSplashScreenActivity
+
+rainews:
+  - it.rainet.android.rainews/com.rainewspoc.MainActivity
+
+virgilio_mail:
+  - it.italiaonline.virgiliomailapp/it.iol.mail.ui.splash.SplashActivity
