--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -156,3 +156,12 @@ rainews:
 
 virgilio_mail:
   - it.italiaonline.virgiliomailapp/it.iol.mail.ui.splash.SplashActivity
+
+hansefit:
+  - de.hansefit.mobileapp/de.hansefit.mobileapp.MainActivity
+
+nobook:
+  - com.ycngmn.nobook/com.ycngmn.nobook.MainActivity
+
+synology_active_insight:
+  - com.synology.activeinsight/com.synology.activeinsight.component.activity.SplashActivity
