--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -147,3 +147,21 @@ whoosh_sharing:
 
 snoonu:
   - com.snoonu.customerapp/com.geexarts.snoonu.presentation.splash.SplashScreenActivity
+
+domani:
+  - com.paperlit.android.domani/com.paperlit.paperlitsp.presentation.view.activity.SPSplashScreenActivity
+
+rainews:
+  - it.rainet.android.rainews/com.rainewspoc.MainActivity
+
+virgilio_mail:
+  - it.italiaonline.virgiliomailapp/it.iol.mail.ui.splash.SplashActivity
+
+hansefit:
+  - de.hansefit.mobileapp/de.hansefit.mobileapp.MainActivity
+
+nobook:
+  - com.ycngmn.nobook/com.ycngmn.nobook.MainActivity
+
+synology_active_insight:
+  - com.synology.activeinsight/com.synology.activeinsight.component.activity.SplashActivity
