--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -177,3 +177,9 @@ cic_banque:
 
 grilld:
   - com.grilld.grilld/com.grilld.grilld.MainActivity
+
+eurosport:
+  - com.eurosport/com.eurosport.presentation.splash.SplashScreenActivity
+
+spin_the_wheel:
+  - com.spinthewheeldecider/com.spinthewheeldecider.MainActivity
