Add icons&compinfo (#1169)
* add icons

* add componentinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -165,3 +165,21 @@ nobook:
 
 synology_active_insight:
   - com.synology.activeinsight/com.synology.activeinsight.component.activity.SplashActivity
+
+atomic_wallet:
+  - io.atomicwallet/io.atomicwallet.MainActivity
+
+caribbean_cinemas:
+  - com.wic.caribbean/com.wic.caribbean.MainActivity
+
+cic_banque:
+  - com.cic_prod.bad/com.e_i.bad.controls.activities.StartActivity
+
+grilld:
+  - com.grilld.grilld/com.grilld.grilld.MainActivity
+
+eurosport:
+  - com.eurosport/com.eurosport.presentation.splash.SplashScreenActivity
+
+spin_the_wheel:
+  - com.spinthewheeldecider/com.spinthewheeldecider.MainActivity
