Fix icon link for menulog

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -183,3 +183,7 @@ eurosport:
 
 spin_the_wheel:
   - com.spinthewheeldecider/com.spinthewheeldecider.MainActivity
+
+takeaway:
+  - com.menulog.m/com.justeat.splash.ui.SplashActivity
+  - com.menulog.m/com.jet.singleactivity.ui.MainActivity
