--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -187,3 +187,21 @@ spin_the_wheel:
 takeaway:
   - com.menulog.m/com.justeat.splash.ui.SplashActivity
   - com.menulog.m/com.jet.singleactivity.ui.MainActivity
+
+choona:
+  - com.rohankhayech.choona/com.rohankhayech.choona.view.activity.TunerActivity
+
+dmenu:
+  - com.nttdocomo.android.dmenu2/com.nttdocomo.android.docomo_market.ui.StartupActivity
+
+firmalom:
+  - it.aria.app.mobile.blockchain.mycred/it.aria.app.mobile.blockchain.mycred.MainActivity
+
+knock_on_ports:
+  - me.impa.knockonports/me.impa.knockonports.MainActivity
+
+nearby_settings:
+  - com.turtlepaw.nearby_settings/com.example.nearby_settings.MainActivity
+
+simple_fitness:
+  - tr.com.basarsubasi.simplefitnessapp/tr.com.basarsubasi.simplefitnessapp.MainActivity
