--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,24 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+busmap:
+  - com.t7.busmap/com.t7.busmap.LanguageActivity
+
+busmap_alt_1: {}
+
+busmap_hanoi:
+  - com.t7.busmaphn/com.t7.busmaphn.LanguageActivity
+
+busmap_hanoi_alt_1: {}
+
+busmap_hanoi_alt_2: {}
+
+sm_cinema:
+  - com.smphi.oma.smcinemas/nz.co.vista.android.movie.abc.feature.splash.SplashActivity
+
+sm_malls:
+  - com.smsupermalls.smmallsonline/com.smsupermalls.smmallsonline.MainActivity
+
+zing:
+  - com.ayalamalls.zing/com.ayalamalls.zing.feature.main.MainActivity
