add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -33,3 +33,12 @@ sm_malls:
 
 zing:
   - com.ayalamalls.zing/com.ayalamalls.zing.feature.main.MainActivity
+
+lofter:
+  - com.lofter.android/com.lofter.android.global.splash.HomeActivity
+
+reverse_1999:
+  - com.bluepoch.m.en.reverse1999/com.ssgame.mobile.overseas.frame.activity.AppStartUpActivity
+
+sakay_ph:
+  - com.byimplication.sakay/com.byimplication.sakay.MainActivity
