--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -42,3 +42,12 @@ reverse_1999:
 
 sakay_ph:
   - com.byimplication.sakay/com.byimplication.sakay.MainActivity
+
+cclauncher:
+  - app.cclauncher/app.cclauncher.MainActivity
+
+farmacia_loreto:
+  - com.farmacia.loreto.it/com.farmacia.loreto.it.MainActivity
+
+tiscali_mail:
+  - com.tiscali.appmail/com.tiscali.appmail.mail.activity.NavigationDrawerActivity
