--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -51,3 +51,24 @@ farmacia_loreto:
 
 tiscali_mail:
   - com.tiscali.appmail/com.tiscali.appmail.mail.activity.NavigationDrawerActivity
+
+pixelix:
+  - com.daniebeler.pfpixelix/com.daniebeler.pfpixelix.AppActivity
+
+nordea:
+  - no.nordea.mobilebank/com.nordea.mobilebank.start.SplashscreenActivity
+
+aldi_uk:
+  - de.apptiv.business.android.aldi_au/com.aldi.ui.launch.LaunchScreenActivity
+
+_8x3:
+  - com.eightxthree.app/com.eightxthree.app.MainActivity
+
+linked__in:
+  - com.linkedin.android/com.linkedin.android.authenticator.EarthFestivalActivityAlias
+
+motorola_notifications:
+  - com.motorola.ccc.notification/com.motorola.engageapp.ui.MotopayActivity
+
+beeper_mini:
+  - com.beeper.android/com.beeper.chat.booper.MainActivity_Default
