Add icons&compinfo (#1173)
* add icons, premium request

* add icons

* add componentinfo

* small fixes

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -33,3 +33,42 @@ sm_malls:
 
 zing:
   - com.ayalamalls.zing/com.ayalamalls.zing.feature.main.MainActivity
+
+lofter:
+  - com.lofter.android/com.lofter.android.global.splash.HomeActivity
+
+reverse_1999:
+  - com.bluepoch.m.en.reverse1999/com.ssgame.mobile.overseas.frame.activity.AppStartUpActivity
+
+sakay_ph:
+  - com.byimplication.sakay/com.byimplication.sakay.MainActivity
+
+cclauncher:
+  - app.cclauncher/app.cclauncher.MainActivity
+
+farmacia_loreto:
+  - com.farmacia.loreto.it/com.farmacia.loreto.it.MainActivity
+
+tiscali_mail:
+  - com.tiscali.appmail/com.tiscali.appmail.mail.activity.NavigationDrawerActivity
+
+pixelix:
+  - com.daniebeler.pfpixelix/com.daniebeler.pfpixelix.AppActivity
+
+nordea:
+  - no.nordea.mobilebank/com.nordea.mobilebank.start.SplashscreenActivity
+
+aldi_uk:
+  - de.apptiv.business.android.aldi_au/com.aldi.ui.launch.LaunchScreenActivity
+
+_8x3:
+  - com.eightxthree.app/com.eightxthree.app.MainActivity
+
+linked__in:
+  - com.linkedin.android/com.linkedin.android.authenticator.EarthFestivalActivityAlias
+
+motorola_notifications:
+  - com.motorola.ccc.notification/com.motorola.engageapp.ui.MotopayActivity
+
+beeper_mini:
+  - com.beeper.android/com.beeper.chat.booper.MainActivity_Default
