--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -105,3 +105,15 @@ service_titan_mobile:
 
 ultimate_guitar:
   - com.ultimateguitar.tabs/com.ultimateguitar.ugpro.UGMainActivity
+
+somtoday:
+  - nl.topicus.somtoday.leerling/nl.topicus.somtoday.leerling.MainActivity
+
+alior_mobile:
+  - pl.aliorbank.aib/pl.alior.aib.legacy.main.splash.SplashActivity
+
+t_mobile:
+  - de.telekom.android.customercenter/com.telekom.oneapp.launcher.components.launcher.LauncherActivity
+
+ente:
+  - io.ente.photos.fdroid/io.ente.photos.fdroid.IconOG
