--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -72,3 +72,48 @@ motorola_notifications:
 
 beeper_mini:
   - com.beeper.android/com.beeper.chat.booper.MainActivity_Default
+
+abc_listen:
+  - com.thisisaim.abcradio/au.net.abc.listen.app.ui.MainActivity
+
+baba:
+  - com.ravenfeld.panoramax.baba/com.ravenfeld.panoramax.baba.MainActivity
+
+borno_bangla_keyboard:
+  - com.codepotro.borno.keyboard/com.codepotro.borno.keyboard.setup.SetupUI
+
+bullet_journal:
+  - app.bulletjournal.bullet_flutter/app.bulletjournal.bullet_flutter.MainActivity
+
+chipolo:
+  - chipolo.net.v3/net.chipolo.app.ui.main.MainActivity
+
+gg_standoff:
+  - gg.stand.golda/gg.stand.golda.MainActivity
+
+gotrendier:
+  - co.com.trendier/trendier.login.LoginActivity
+
+liftoff_workouts:
+  - com.gymbros.app/com.gymbros.app.MainActivity
+
+ring_conn:
+  - com.gdjztech.ringconn/com.gdjztech.ringconn.MainActivity
+
+service_titan_mobile:
+  - com.servicetitan.mobile/com.servicetitan.mobile.MainActivity
+
+ultimate_guitar:
+  - com.ultimateguitar.tabs/com.ultimateguitar.ugpro.UGMainActivity
+
+somtoday:
+  - nl.topicus.somtoday.leerling/nl.topicus.somtoday.leerling.MainActivity
+
+alior_mobile:
+  - pl.aliorbank.aib/pl.alior.aib.legacy.main.splash.SplashActivity
+
+t_mobile:
+  - de.telekom.android.customercenter/com.telekom.oneapp.launcher.components.launcher.LauncherActivity
+
+ente:
+  - io.ente.photos.fdroid/io.ente.photos.fdroid.IconOG
