--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,57 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+appkiller:
+  - com.redsoft.appkiller/com.redsoft.appkiller.ui.activities.main.MainActivity
+
+blip:
+  - net.blip.android/net.blip.android.MainActivity
+
+carrefour_pass:
+  - com.carrefour.carrefourPass/com.accenture.carrefourPass.splash.view.SplashActivity
+
+coyote:
+  - com.coyotesystems.android/com.coyotesystems.alerting.app.mobile.presentation.MobileActivity
+
+flinkster:
+  - de.flinkster.sharing.app/de.tamyca.fleetbutler.activities.RoutingActivity
+
+foodora:
+  - se.onlinepizza/de.foodora.android.ui.launcher.LauncherActivity
+
+foss_warn:
+  - de.nucleus.foss_warn/de.nucleus.foss_warn.MainActivity
+
+geph:
+  - io.geph.android/io.geph.android.MainActivity
+
+hitv:
+  - com.captha.didymoi/com.captha.didymoi.module_home.HomeActivityNew
+
+kbs:
+  - kr.co.kbs.kplayer/kr.co.kbs.kplayer.intro.splash.SplashActivity
+
+moonpay:
+  - com.moonpay/com.moonpay.MainActivity
+
+octopi_launcher:
+  - com.otp.octopilauncher/com.otp.octopilauncher.MainActivity
+
+orange_tv_go:
+  - ro.orange.tvlive/app.solocoo.tv.solocoo.login.splash.SplashActivity
+
+public:
+  - com.public.app/com.publicapp.app.app.MainActivity
+
+qwen:
+  - ai.qwenlm.chat.android/ai.qwenlm.chat.android.MainActivity
+
+runna:
+  - com.runbuddy.prod/com.runbuddy.prod.MainActivityDefault
+
+united_healthcare:
+  - com.mobile.uhc/com.mobile.uhc.SplashActivity
+
+zigzag:
+  - com.croquis.zigzag/com.croquis.zigzag.presentation.ui.splash.SplashActivity
