--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -66,3 +66,36 @@ united_healthcare:
 
 zigzag:
   - com.croquis.zigzag/com.croquis.zigzag.presentation.ui.splash.SplashActivity
+
+camera:
+  - com.agc.gcam92/com.android.camera.CameraLauncher
+
+pix_material_you_light_dark:
+  - com.pashapuma.pix.material.you.dark/com.pashapuma.pix.material.you.dark.activities.MainActivity
+
+takeaway:
+  - com.justeat.app.uk/com.jet.singleactivity.ui.MainActivity
+
+reddit:
+  - app.rvx.reddit.frontpage/launcher.default
+
+ex_kernel_manager:
+  - flar2.exkernelmanager/a.b
+
+addy_io:
+  - host.stjin.anonaddy/host.stjin.anonaddy.GradientIcon
+
+osmin:
+  - io.github.janbar.osmin/io.github.janbar.osmin.QtAndroidActivity
+
+vodafone:
+  - com.appseleration.android.selfcare/com.meinvodafone.rn.dev.MainActivity
+
+burger_king:
+  - com.emn8.mobilem8.nativeapp.bkca/com.emn8.mobilem8.nativeapp.bkca.MainActivity
+
+bbc_iplayer:
+  - bbc.iplayer.android/uk.co.bbc.iplayer.startup.RoutingActivity
+
+digipaws:
+  - nethical.digipaws/nethical.digipaws.ui.activity.MainActivity
