add icons&compinfo (#1175)
* add icons

* add componentinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,90 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+appkiller:
+  - com.redsoft.appkiller/com.redsoft.appkiller.ui.activities.main.MainActivity
+
+blip:
+  - net.blip.android/net.blip.android.MainActivity
+
+carrefour_pass:
+  - com.carrefour.carrefourPass/com.accenture.carrefourPass.splash.view.SplashActivity
+
+coyote:
+  - com.coyotesystems.android/com.coyotesystems.alerting.app.mobile.presentation.MobileActivity
+
+flinkster:
+  - de.flinkster.sharing.app/de.tamyca.fleetbutler.activities.RoutingActivity
+
+foodora:
+  - se.onlinepizza/de.foodora.android.ui.launcher.LauncherActivity
+
+foss_warn:
+  - de.nucleus.foss_warn/de.nucleus.foss_warn.MainActivity
+
+geph:
+  - io.geph.android/io.geph.android.MainActivity
+
+hitv:
+  - com.captha.didymoi/com.captha.didymoi.module_home.HomeActivityNew
+
+kbs:
+  - kr.co.kbs.kplayer/kr.co.kbs.kplayer.intro.splash.SplashActivity
+
+moonpay:
+  - com.moonpay/com.moonpay.MainActivity
+
+octopi_launcher:
+  - com.otp.octopilauncher/com.otp.octopilauncher.MainActivity
+
+orange_tv_go:
+  - ro.orange.tvlive/app.solocoo.tv.solocoo.login.splash.SplashActivity
+
+public:
+  - com.public.app/com.publicapp.app.app.MainActivity
+
+qwen:
+  - ai.qwenlm.chat.android/ai.qwenlm.chat.android.MainActivity
+
+runna:
+  - com.runbuddy.prod/com.runbuddy.prod.MainActivityDefault
+
+united_healthcare:
+  - com.mobile.uhc/com.mobile.uhc.SplashActivity
+
+zigzag:
+  - com.croquis.zigzag/com.croquis.zigzag.presentation.ui.splash.SplashActivity
+
+camera:
+  - com.agc.gcam92/com.android.camera.CameraLauncher
+
+pix_material_you_light_dark:
+  - com.pashapuma.pix.material.you.dark/com.pashapuma.pix.material.you.dark.activities.MainActivity
+
+takeaway:
+  - com.justeat.app.uk/com.jet.singleactivity.ui.MainActivity
+
+reddit:
+  - app.rvx.reddit.frontpage/launcher.default
+
+ex_kernel_manager:
+  - flar2.exkernelmanager/a.b
+
+addy_io:
+  - host.stjin.anonaddy/host.stjin.anonaddy.GradientIcon
+
+osmin:
+  - io.github.janbar.osmin/io.github.janbar.osmin.QtAndroidActivity
+
+vodafone:
+  - com.appseleration.android.selfcare/com.meinvodafone.rn.dev.MainActivity
+
+burger_king:
+  - com.emn8.mobilem8.nativeapp.bkca/com.emn8.mobilem8.nativeapp.bkca.MainActivity
+
+bbc_iplayer:
+  - bbc.iplayer.android/uk.co.bbc.iplayer.startup.RoutingActivity
+
+digipaws:
+  - nethical.digipaws/nethical.digipaws.ui.activity.MainActivity
