--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -99,3 +99,11 @@ bbc_iplayer:
 
 digipaws:
   - nethical.digipaws/nethical.digipaws.ui.activity.MainActivity
+
+mymoney:
+  - com.raha.app.mymoney.free/com.raha.app.mymoney.ui.activity.SplashActivity
+
+pin_board_downloader:
+  - io.quarkux.pinboarddownloader/io.quarkux.pinboarddownloader.MainActivity
+
+pin_board_downloader_alt_1: {}
