--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -99,3 +99,8 @@ bbc_iplayer:
 
 digipaws:
   - nethical.digipaws/nethical.digipaws.ui.activity.MainActivity
+
+pin_board_downloader:
+  - io.quarkux.pinboarddownloader/io.quarkux.pinboarddownloader.MainActivity
+
+pin_board_downloader_alt_1: {}
