--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -104,3 +104,12 @@ pin_board_downloader:
   - io.quarkux.pinboarddownloader/io.quarkux.pinboarddownloader.MainActivity
 
 pin_board_downloader_alt_1: {}
+
+cannes_agenda:
+  - fr.cannes.agenda/fr.cannes.agenda.MainActivity
+
+cannes_civique:
+  - fr.cannes.civique/fr.cannes.civique.MainActivity
+
+cannes_radio:
+  - com.pm.cannes/com.thisisaim.templateapp.view.activity.intro.IntroActivity
