new icon: Podorozhnik+

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -113,3 +113,6 @@ cannes_civique:
 
 cannes_radio:
   - com.pm.cannes/com.thisisaim.templateapp.view.activity.intro.IntroActivity
+
+podorozhnik_plus:
+  - ru.bnice.a300/ru.bnice.a300.MainActivity
