new icon: My Mosenergosbyt

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -116,3 +116,6 @@ cannes_radio:
 
 podorozhnik_plus:
   - ru.bnice.a300/ru.bnice.a300.MainActivity
+
+my_mosenergosbyt:
+  - ru.tii.lkcomu/ru.tii.lkkcomu.mos.view.splash_screen.MosSplashScreenActivity
