add missing compinfos

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -119,3 +119,12 @@ podorozhnik_plus:
 
 my_mosenergosbyt:
   - ru.tii.lkcomu/ru.tii.lkkcomu.mos.view.splash_screen.MosSplashScreenActivity
+
+tinkoff_invest:
+  - ru.tinkoff.investing/ru.tinkoff.investing.feature.splash.impl.screens.splash.SplashActivity
+
+the_wallet:
+  - ru.cardsmobile.mw3.product.cardholder.main.presentation.ui.MainActivity
+
+calces:
+  - advanced.scientific.calculator.calc991.plus/advanced.scientific.calculator.calc991.plus.main.GlobalClustererRowShapeEmphasizerActivity
