new icon: Rosseti

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -128,3 +128,6 @@ the_wallet:
 
 calces:
   - advanced.scientific.calculator.calc991.plus/advanced.scientific.calculator.calc991.plus.main.GlobalClustererRowShapeEmphasizerActivity
+
+rosseti:
+  - ru.stackit.mobileappkavkazkchkb/ru.stackit.mobileappkavkazkchkb.MainActivity
