new icon: Obschina

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -131,3 +131,6 @@ calces:
 
 rosseti:
   - ru.stackit.mobileappkavkazkchkb/ru.stackit.mobileappkavkazkchkb.MainActivity
+
+obschina:
+  - ru.obshchinaru.obshchina/band.effective.obshchina.MainActivity
