--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -134,3 +134,6 @@ rosseti:
 
 obschina:
   - ru.obshchinaru.obshchina/band.effective.obshchina.MainActivity
+
+max:
+  - ru.oneme.app/one.me.android.MainActivity
