new icon: Yandex.Calendar

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -137,3 +137,6 @@ obschina:
 
 max:
   - ru.oneme.app/one.me.android.MainActivity
+
+yandex_calendar:
+  - com.yandex.calendar.app/com.yandex.calendar.app.AppActivity
