--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -124,7 +124,7 @@ tinkoff_invest:
   - ru.tinkoff.investing/ru.tinkoff.investing.feature.splash.impl.screens.splash.SplashActivity
 
 the_wallet:
-  - ru.cardsmobile.mw3.product.cardholder.main.presentation.ui.MainActivity
+  - ru.cardsmobile.mw3/ru.cardsmobile.mw3.product.cardholder.main.presentation.ui.MainActivity
 
 calces:
   - advanced.scientific.calculator.calc991.plus/advanced.scientific.calculator.calc991.plus.main.GlobalClustererRowShapeEmphasizerActivity
