--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -113,3 +113,30 @@ cannes_civique:
 
 cannes_radio:
   - com.pm.cannes/com.thisisaim.templateapp.view.activity.intro.IntroActivity
+
+podorozhnik_plus:
+  - ru.bnice.a300/ru.bnice.a300.MainActivity
+
+my_mosenergosbyt:
+  - ru.tii.lkcomu/ru.tii.lkkcomu.mos.view.splash_screen.MosSplashScreenActivity
+
+tinkoff_invest:
+  - ru.tinkoff.investing/ru.tinkoff.investing.feature.splash.impl.screens.splash.SplashActivity
+
+the_wallet:
+  - ru.cardsmobile.mw3/ru.cardsmobile.mw3.product.cardholder.main.presentation.ui.MainActivity
+
+calces:
+  - advanced.scientific.calculator.calc991.plus/advanced.scientific.calculator.calc991.plus.main.GlobalClustererRowShapeEmphasizerActivity
+
+rosseti:
+  - ru.stackit.mobileappkavkazkchkb/ru.stackit.mobileappkavkazkchkb.MainActivity
+
+obschina:
+  - ru.obshchinaru.obshchina/band.effective.obshchina.MainActivity
+
+max:
+  - ru.oneme.app/one.me.android.MainActivity
+
+yandex_calendar:
+  - com.yandex.calendar.app/com.yandex.calendar.app.AppActivity
