--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -141,7 +141,7 @@ max:
 yandex_calendar:
   - com.yandex.calendar.app/com.yandex.calendar.app.AppActivity
 
-bus+:
+bus_plus:
   - hearsilent.busplus/hearsilent.busplus.activity.SplashActivity
 
 pop:
