added 3 new icons & compinfos (#1180)
* added 3 new icons

* added compinfo

* rename bus+ to bus_plus

---------

Co-authored-by: flameshikari <mail@hexed.pw>

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -140,3 +140,13 @@ max:
 
 yandex_calendar:
   - com.yandex.calendar.app/com.yandex.calendar.app.AppActivity
+
+bus_plus:
+  - hearsilent.busplus/hearsilent.busplus.activity.SplashActivity
+
+pop:
+  - com.popclub.android/com.popclub.android.home.ui.SpSwitchHomeActivity
+
+work_shift_calendar:
+  - com.lrhsoft.shiftercalendar/com.lrhsoft.shiftercalendar.MainActivity
+
