--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -150,3 +150,6 @@ pop:
 work_shift_calendar:
   - com.lrhsoft.shiftercalendar/com.lrhsoft.shiftercalendar.MainActivity
 
+letters_icon_pack:
+ - com.github.droidworksstudio.icons/com.github.droidworksstudio.icons.MainActivity
+
