--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -153,3 +153,20 @@ work_shift_calendar:
 letters_icon_pack:
  - com.github.droidworksstudio.icons/com.github.droidworksstudio.icons.MainActivity
 
+aneko_reborn:
+  - org.nqmgaming.aneko/org.nqmgaming.aneko.presentation.ANekoActivity
+
+booming_music:
+  - com.mardous.booming/com.mardous.booming.activities.MainActivity
+
+find_my_family:
+  - cc.findfamily.app/com.opengps.locationsharing.android.MainActivity
+
+foss_wallet:
+  - nz.eloque.foss_wallet/nz.eloque.foss_wallet.MainActivity
+
+open_store:
+  - dev.mi6e4ka.openstore/dev.mi6e4ka.openstore.MainActivity
+
+record_equalizer:
+  - com.sb.recordequalizer/com.sb.recordequalizer.android.MainActivity
