--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -170,3 +170,6 @@ open_store:
 
 record_equalizer:
   - com.sb.recordequalizer/com.sb.recordequalizer.android.MainActivity
+
+ion_launcher:
+  - one.zagura.IonLauncher/one.zagura.IonLauncher.SetupAlias
