--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -52,7 +52,7 @@ octopi_launcher:
 orange_tv_go:
   - ro.orange.tvlive/app.solocoo.tv.solocoo.login.splash.SplashActivity
 
-public:
+public_stocks:
   - com.public.app/com.publicapp.app.app.MainActivity
 
 qwen:
