add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,13 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+
+desh_marathi_keyboard:
+  - com.marathi.keyboard.for.android/com.example.android.softkeyboard.easyconfig.EasyConfig
+
+settings_app:
+  - com.apps.settings/com.apps.settings.MainActivity
+
+sonyliv:
+  - com.sonyliv/com.sonyliv.splash.SplashActivity
