--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -22,3 +22,33 @@ settings_app:
 
 sonyliv:
   - com.sonyliv/com.sonyliv.splash.SplashActivity
+
+aura:
+  - com.aura.suite/com.aura.suite.MainActivity
+
+kakao_metro:
+  - net.orizinal.subway/com.kakao.kakaometro.ui.login.LoginActivity
+
+open_nutri_tracker:
+  - com.opennutritracker.ont.opennutritracker/com.opennutritracker.ont.opennutritracker.MainActivity
+
+rakuten_tv:
+  - tv.wuaki/tv.wuaki.mobile.activity.LaunchActivity
+
+seqular:
+  - net.seqular.network/net.seqular.network.MainActivity
+
+sporza:
+  - com.fwc2014.vrt.and/com.fwc2014.vrt.and.activity.MainActivity
+
+stepsy:
+  - com.nvllz.stepsy/com.nvllz.stepsy.ui.MainActivity
+
+tribit:
+  - com.thousandshores.tribit/com.thousandshores.tribit.modulelogin.activity.FirstActivity
+
+voi:
+  - io.voiapp.voi/io.voiapp.voi.MainActivity
+
+youtube_create:
+  - com.google.android.apps.youtube.producer/com.google.android.apps.youtube.producer.application.MainActivity
