--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -52,3 +52,27 @@ voi:
 
 youtube_create:
   - com.google.android.apps.youtube.producer/com.google.android.apps.youtube.producer.application.MainActivity
+
+ente:
+  - io.ente.photos.fdroid/io.ente.photos.fdroid.IconGreen
+
+bixi:
+  - com.eightd.biximobile/me.lyft.android.ui.main.SplashActivity
+
+nubank:
+  - com.nu.production/br.com.nubank.app.LegacySplashActivity
+
+firefox:
+  - org.mozilla.firefox/org.mozilla.firefox.AlternativeApp
+
+opera:
+  - com.opera.browser/com.opera.Launcher6
+
+takeaway:
+  - com.justeat.app.it/com.jet.singleactivity.ui.MainActivity
+
+phonograph:
+  - player.phonograph.plus/player.phonograph.ui.modules.auxiliary.LauncherActivity
+
+seal:
+  - com.junkfood.seal.preview/com.junkfood.seal.MainActivity
