Fix icon link for Bupa

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,6 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+bupa:
+    - bupa.ProviderFinder/crc64bd4f42d567ec1d59.guvnkdkefgkq
