new icon: Azahar

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -14,4 +14,7 @@
 #     - com.google.app/com.google.app.MainActivity
 
 bupa:
-    - bupa.ProviderFinder/crc64bd4f42d567ec1d59.guvnkdkefgkq
+  - bupa.ProviderFinder/crc64bd4f42d567ec1d59.guvnkdkefgkq
+
+azahar:
+  - io.github.lime3ds.android/org.citra.citra_emu.ui.main.MainActivity
