--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -24,3 +24,6 @@ bhim:
 
 fintables:
   - com.fintables.fintables/com.fintables.MainActivity
+
+navi:
+  - com.naviapp/com.naviapp.home.compose.activity.HomePageActivity
