new icon: FamilySearch Tree

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -27,3 +27,6 @@ fintables:
 
 navi:
   - com.naviapp/com.naviapp.home.compose.activity.HomePageActivity
+
+familysearch_tree:
+  - org.familysearch.mobile/org.familysearch.mobile.tree.MainActivity
