new compinfo: Flycast

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -30,3 +30,6 @@ navi:
 
 familysearch_tree:
   - org.familysearch.mobile/org.familysearch.mobile.tree.MainActivity
+
+flycast:
+  - com.flycast.emulator/com.flycast.emulator.MainActivity
