new icon: Eventbrite (moved the old one to alt_1)

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -33,3 +33,6 @@ familysearch_tree:
 
 flycast:
   - com.flycast.emulator/com.flycast.emulator.MainActivity
+
+eventbrite:
+  - com.eventbrite.attendee/com.eventbrite.attendee.legacy.activities.InnerMainActivity$MainActivity
