new icon: Yonder Rewards Cards

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -36,3 +36,6 @@ flycast:
 
 eventbrite:
   - com.eventbrite.attendee/com.eventbrite.attendee.legacy.activities.InnerMainActivity$MainActivity
+
+yonder_rewards_cards:
+  - com.goyonder.yonder/com.goyonder.yonder.MainActivityDefault
