new icon: Japan Airlines

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -39,3 +39,6 @@ eventbrite:
 
 yonder_rewards_cards:
   - com.goyonder.yonder/com.goyonder.yonder.MainActivityDefault
+
+japan_airlines:
+  - jp.co.jal.dom/jp.co.jal.dom.activities.StartActivity
