--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -14,4 +14,31 @@
 #     - com.google.app/com.google.app.MainActivity
 
 bupa:
-    - bupa.ProviderFinder/crc64bd4f42d567ec1d59.guvnkdkefgkq
+  - bupa.ProviderFinder/crc64bd4f42d567ec1d59.guvnkdkefgkq
+
+azahar:
+  - io.github.lime3ds.android/org.citra.citra_emu.ui.main.MainActivity
+
+bhim:
+  - in.org.npci.upiapp/r.O
+
+fintables:
+  - com.fintables.fintables/com.fintables.MainActivity
+
+navi:
+  - com.naviapp/com.naviapp.home.compose.activity.HomePageActivity
+
+familysearch_tree:
+  - org.familysearch.mobile/org.familysearch.mobile.tree.MainActivity
+
+flycast:
+  - com.flycast.emulator/com.flycast.emulator.MainActivity
+
+eventbrite:
+  - com.eventbrite.attendee/com.eventbrite.attendee.legacy.activities.InnerMainActivity$MainActivity
+
+yonder_rewards_cards:
+  - com.goyonder.yonder/com.goyonder.yonder.MainActivityDefault
+
+japan_airlines:
+  - jp.co.jal.dom/jp.co.jal.dom.activities.StartActivity
