--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -42,3 +42,24 @@ yonder_rewards_cards:
 
 japan_airlines:
   - jp.co.jal.dom/jp.co.jal.dom.activities.StartActivity
+
+byair:
+  - com.byairapp.android/ru.wearemad.byair.features.launcher.LauncherActivityAlias1
+
+dolap:
+  - com.dolap.android/com.dolap.android.splash.ui.SplashActivity
+
+dr_driving:
+  - com.ansangha.drdriving/com.ansangha.drdriving.DrDrivingActivity
+
+eba:
+  - tr.gov.eba.hesap/tr.gov.eba.hesap.SplashScreenActivity
+
+jango_radio:
+  - com.jangomobile.android/com.jangomobile.android.ui.activities.SplashActivity
+
+laudate:
+  - com.aycka.apps.MassReadings/com.aycka.apps.MassReadings.Top
+
+universalis:
+  - com.universalis.android.universalis/com.universalis.android.MainActivity
