--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -63,3 +63,51 @@ laudate:
 
 universalis:
   - com.universalis.android.universalis/com.universalis.android.MainActivity
+
+airplanes_live:
+  - eu.darken.apl/eu.darken.apl.main.ui.MainActivity
+
+archivekeep:
+  - org.archivekeep.ArchiveKeep/org.archivekeep.app.android.MainActivity
+
+continuum:
+  - org.cygnusx1.continuum/ml.docilealligator.infinityforreddit.activities.MainActivit
+
+custom_uploader:
+  - com.nyx.custom_uploader/com.nyx.custom_uploader.MainActivity
+
+dhizuku:
+  - com.rosan.dhizuku/com.rosan.dhizuku.ui.activity.SettingsActivity
+
+edge_seek:
+  - lsafer.edgeseek/net.lsafer.edgeseek.app.MainActivity
+
+google_notebooklm:
+  - com.google.android.apps.labs.language.tailwind/com.google.android.apps.labs.language.tailwind.MainActivityDev
+
+immich_uploader:
+  - com.exner.tools.immichuploader/com.exner.tools.immichuploader.MainActivity
+
+motion_ease_tune:
+  - com.bhznjns.motion_ease_tune/com.bhznjns.motion_ease_tune.MainActivity
+
+motogp:
+  - com.dorna.officialmotogp/com.dorna.officialmotogp.SplashActivity
+
+mygigroup:
+  - com.gigroup.myplatform.it.mobilecandidate/com.gigroup.myplatform.it.mobilecandidate.MainActivity
+
+pto:
+  - de.ferreum.pto/de.ferreum.pto.MainActivity
+
+pulse:
+  - partisan.weforge.xyz.pulse/partisan.weforge.xyz.pulse.WelcomeActivity
+
+simple_text_editor:
+  - com.maxistar.textpad/com.maxistar.textpad.activities.EditorActivity
+
+strong_workout_tracker:
+  - io.strongapp.strong/io.strongapp.strong.ui.main.MainActivity
+
+wikwok:
+  - com.github.terrakok.wikwok.androidApp/com.github.terrakok.wikwok.AppActivity
