--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -83,6 +83,8 @@ edge_seek:
   - lsafer.edgeseek/net.lsafer.edgeseek.app.MainActivity
 
 google_notebooklm:
+  category: 'Google'
+  compinfos:
   - com.google.android.apps.labs.language.tailwind/com.google.android.apps.labs.language.tailwind.MainActivityDev
 
 immich_uploader:
@@ -111,3 +113,42 @@ strong_workout_tracker:
 
 wikwok:
   - com.github.terrakok.wikwok.androidApp/com.github.terrakok.wikwok.AppActivity
+
+mixcloud:
+  - com.mixcloud.player/com.mixcloud.player.MainActivity
+
+disney_plus:
+  - in.startv.hotstar.dplus/com.hotstar.MainActivity
+
+rumble:
+  - com.rumble.battles/com.rumble.battles.landing.RumbleMainActivity
+
+ayugram:
+  - com.radolyn.ayugram/com.exteragram.messenger.MonetIcon
+
+john_gba:
+  - com.johnemulators.johngbalite/com.johnemulators.activity.RomListActivity
+
+teamsnap:
+  - com.teamsnap.teamsnap/com.teamsnap.teamsnap.features.user.UserActivity
+
+flappy_bird:
+  - com.flappybird.game/android.app.NativeActivity
+
+secuso_ruler:
+  - org.secuso.privacyfriendlyruler/org.secuso.privacyfriendlyrulerapp.activities.SplashActivity
+
+ooni_probe:
+  - org.openobservatory.ooniprobe/org.ooni.probe.MainActivity
+
+burger_king:
+  - no.burgerking.ordersapp/com.deazy.popeyes.MainActivity
+
+arc_search:
+  - company.thebrowser.arc/company.thebrowser.arc.composable.ArcActivity.IconFive
+
+zedge:
+  - net.zedge.android/net.zedge.android.MainSpring
+
+leroy_merlin:
+  - com.adeo.android.app/com.adeo.retail.mobile.app.MainActivity
